--- a/B4rrCash/B4rrCash.csproj
+++ b/B4rrCash/B4rrCash.csproj
@@ -50,8 +50,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dollar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestMoney.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
