--- a/B4rrCash/B4rrCash.csproj
+++ b/B4rrCash/B4rrCash.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dollar.cs" />
+    <Compile Include="Franc.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestMoney.cs" />
