--- a/B4rrCash/B4rrCash.csproj
+++ b/B4rrCash/B4rrCash.csproj
@@ -51,11 +51,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bank.cs" />
-    <Compile Include="Wallet.cs" />
+    <Compile Include="Expression.cs" />
+    <Compile Include="Sum.cs" />
     <Compile Include="Money.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestWalletBank.cs" />
     <Compile Include="TestMoney.cs" />
   </ItemGroup>
   <ItemGroup>
